--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>amtstester</title>
+  <title>AntiAMTS Tester</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
@@ -54,5 +54,6 @@
       });
     });
   </script>
+  <script src="./main.dart.js" type="application/javascript"></script>
 </body>
 </html>
