--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
     var serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
+  <script src="/AntiAMTS-tester/flutter.js" defer></script>
 </head>
 <body>
   <script>
@@ -54,6 +54,6 @@
       });
     });
   </script>
-  <script src="./main.dart.js" type="application/javascript"></script>
+  <script src="/AntiAMTS-tester/main.dart.js" type="application/javascript"></script>
 </body>
 </html>
