--- a/web/index.html
+++ b/web/index.html
@@ -24,13 +24,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="amtstester">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="/AntiAMTS-tester/icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="/AntiAMTS-tester/favicon.png"/>
 
   <title>AntiAMTS Tester</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/AntiAMTS-tester/manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
