--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/AntiAMTS-tester/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -24,20 +24,20 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="amtstester">
-  <link rel="apple-touch-icon" href="/AntiAMTS-tester/icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/AntiAMTS-tester/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>AntiAMTS Tester</title>
-  <link rel="manifest" href="/AntiAMTS-tester/manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="/AntiAMTS-tester/flutter.js" defer></script>
+  <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
@@ -54,6 +54,6 @@
       });
     });
   </script>
-  <script src="/AntiAMTS-tester/main.dart.js" type="application/javascript"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
